@@ -1,5 +1,7 @@
 Changes in 1.7
 
+- Fix tooltips for gui-elements with sub-element like IGUISpinBox (id: 2927079, found by ArakisTheKitsune)
+
  - ITimer no longer stops when started twice
 
  - Add hasType to IGUIElement as a dynamic_cast substitute.
